--- a/index.html
+++ b/index.html
@@ -46,9 +46,13 @@
 	<div class="meets"></div>
 
 	<div id="container">
-		<ul class="gallery"></ul>
+		<ul id="gallery" class="gallery"></ul>
 	</div>
 
 	<script src="https://masons.photography/script.js"></script>
+	<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin></script>
+	<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin></script>
+
+	<script src="babel.js"></script>
 </body>
 </html>
