Localize all file references

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
 	<meta property="og:url" content="https://masons.photography/">
 	<meta property="og:title" content="Mason's Photography">
 	<meta property="og:description" content="Home to all of Mason Kolehmainen's photography.">
-	<meta property="og:image" content="https://masons.photography/IMG_7070.jpg">
+	<meta property="og:image" content="/IMG_7070.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://masons.photography/">
 	<meta property="twitter:title" content="Mason's Photography">
 	<meta property="twitter:description" content="Home to all of Mason Kolehmainen's photography.">
-	<meta property="twitter:image" content="https://masons.photography/IMG_7070.jpg">
+	<meta property="twitter:image" content="/IMG_7070.jpg">
 	
-	<link rel="stylesheet" href="https://masons.photography/styles.css">
-	<link rel="shortcut icon" href="https://masons.photography/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="https://masons.photography/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="/styles.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 
 	<!-- Google tag (gtag.js) -->
 	<script src="https://www.googletagmanager.com/gtag/js?id=G-CE942V6Q5H" async></script>
@@ -41,7 +41,7 @@
 </head>
 <body>
 	<div class="header">
-		<a href="https://masons.photography/">Mason's Photography</a>
+		<a href="/">Mason's Photography</a>
 	</div>
 	<div class="meets"></div>
 
@@ -49,6 +49,6 @@
 		<ul class="gallery"></ul>
 	</div>
 
-	<script src="https://masons.photography/script.js"></script>
+	<script src="/script.js"></script>
 </body>
 </html>
