--- a/notfound.html
+++ b/notfound.html
@@ -17,18 +17,18 @@
 	<meta property="og:url" content="https://masons.photography/">
 	<meta property="og:title" content="Mason's Photography">
 	<meta property="og:description" content="Home to all of Mason Kolehmainen's photography.">
-	<meta property="og:image" content="https://masons.photography/IMG_7070.jpg">
+	<meta property="og:image" content="/IMG_7070.jpg">
 
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://masons.photography/">
 	<meta property="twitter:title" content="Mason's Photography">
 	<meta property="twitter:description" content="Home to all of Mason Kolehmainen's photography.">
-	<meta property="twitter:image" content="https://masons.photography/IMG_7070.jpg">
+	<meta property="twitter:image" content="/IMG_7070.jpg">
 	
-	<link rel="shortcut icon" href="https://masons.photography/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="https://masons.photography/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="https://masons.photography/404.css">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="stylesheet" href="/404.css">
 
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-CE942V6Q5H"></script>
